gif file and login form UI alignment is fixed

--- a/my-app/src/app/login/login.component.scss
+++ b/my-app/src/app/login/login.component.scss
@@ -3,6 +3,7 @@
 
 .brand-logo {
     width: 120px;
+    padding: 30px;
 }
 .full-screen-section {
     height: 100vh;
@@ -28,9 +29,11 @@
         transform: translate(-50%, -50%);
         top: 50%;
         left: 50%;
+        background: #fff;
+        padding: 20px 15px 25px;
+        border-radius: 25%;
         img {
             width: 100px;
-            border-radius: 50%;
         }
     }
 }
@@ -40,4 +43,15 @@
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+}
+
+.forgot-password-block {
+    float: right;
+    display: block;
+}
+
+.login-button-block {
+    display: block;
+    float: inherit;
+    padding: 40px 0;;
 }
